# discord-scraper

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-05-08-134010_create_messages/: up.sql
migrations/2025-05-08-181012_b/: up.sql
src/: automod.rs  cache.rs  client.rs  database.rs  dsa.rs  email.rs  image.rs  main.rs  message.rs  packet.rs  schema.rs  utils.rs
